objects/CRM_Hospital_Zip_ServiceArea_Ref_Data__c.object
<CustomObject>
    <description>Stores Relationship between Hospital, Service Area and Zip</description>
    <fields>
        <fullName>CRM_HZSAsHospitalID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hospital record ID for the respective Hospital_Zip_searvice Area relationship record</description>
        <inlineHelpText>Hospital record ID for the respective Hospital_Zip_searvice Area relationship record</inlineHelpText>
        <label>HZSA&apos;s Hospital ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match Hospital filter criteria.</errorMessage>
            <filterItems>
                <field>CRM_CampaignLocationReferenceData__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Hospital</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CRM_CampaignLocationReferenceData__c</referenceTo>
        <relationshipName>CRM_HZSAHospitalMapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_HZSAsHospitalName__c</fullName>
        <formula>CRM_HZSAsHospitalID__r.CRM_Hospital__c</formula>
        <label>HZSA&apos;s Hospital Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_HZSAsMarketID__c</fullName>
        <formula>CRM_HZSAsHospitalID__r.CRM_HospitalsMarketName__c</formula>
        <label>HZSA&apos;s Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_HZSAsRegionID__c</fullName>
        <formula>CRM_HZSAsHospitalID__r.CRM_HospitalsRegionName__c</formula>
        <label>HZSA&apos;s Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_HZSAsServiceAreaID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Area record ID for  the respective Hospital_Zip_ServiceArea relationship record</description>
        <inlineHelpText>Service Area record ID for  the respective Hospital_Zip_ServiceArea relationship record</inlineHelpText>
        <label>HZSA&apos;s ServiceArea ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match Service Area filter criteria.</errorMessage>
            <filterItems>
                <field>CRM_CampaignLocationReferenceData__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Area</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CRM_CampaignLocationReferenceData__c</referenceTo>
        <relationshipName>CRM_HZSAServiceAreaMapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_HZSAsServiceAreaName__c</fullName>
        <formula>CRM_HZSAsServiceAreaID__r.CRM_ServiceArea__c</formula>
        <label>HZSA&apos;s ServiceArea Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_HZSAsZipCode__c</fullName>
        <formula>CRM_HZSAsZipID__r.CRM_ZipCode__c</formula>
        <label>HZSA&apos;s Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_HZSAsZipID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Zip record ID for the respective Hospital_Zip_ServiceArea relationship record</description>
        <inlineHelpText>Zip record ID for the respective Hospital_Zip_ServiceArea relationship record</inlineHelpText>
        <label>HZSA&apos;s Zip ID</label>
        <referenceTo>CRM_ZipCodeReferenceData__c</referenceTo>
        <relationshipName>CRM_HZSAZipMapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checks whether the record is Active or Inactive</description>
        <inlineHelpText>Used to active/Inactive the record</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Ref Data - Hospital Zip Service Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRM_HZSAsHospitalName__c</columns>
        <columns>CRM_HZSAsMarketID__c</columns>
        <columns>CRM_HZSAsRegionID__c</columns>
        <columns>CRM_HZSAsServiceAreaName__c</columns>
        <columns>CRM_HZSAsZipCode__c</columns>
        <columns>CRM_IsActive__c</columns>
        <columns>CRM_HZSAsHospitalID__c</columns>
        <columns>CRM_HZSAsServiceAreaID__c</columns>
        <columns>CRM_HZSAsZipID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HZSA-{0000}</displayFormat>
        <label>HZSA Reference Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ref Data - Hospital Zip Service Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>